dockercoins/kubernetes/dev/rng_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rng
    application: dockercoins
  name: rng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rng
      application: dockercoins
  strategy: {}
  template:
    metadata:
      labels:
        app: rng
        application: dockercoins
    spec:
      containers:
      - image: slickteam/dockercoins-rng:dev
        name: rng
        readinessProbe:
          httpGet:
            path: /32
            port: 80
        resources: {}
