dockercoins/kubernetes/dev/webui_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webui
    application: dockercoins
  name: webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui
      application: dockercoins
  strategy: {}
  template:
    metadata:
      labels:
        app: webui
        application: dockercoins
    spec:
      containers:
      - image: slickteam/dockercoins-webui:dev
        name: webui
        resources: {}
status: {}
