dockercoins/kubernetes/dev/webui_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webui
    application: dockercoins
  name: webui
spec:
  ports:
  - port: 80
  selector:
    app: webui
    application: dockercoins
