dockercoins/kubernetes/dev/ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: dockercoins
 annotations:
   ingress.kubernetes.io/ssl-redirect: "false"
spec:
 rules:
 - host: dockercoins.172.26.0.5.nip.io
   http:
     paths:
     - path: /
       backend:
         serviceName: webui
         servicePort: 80
